# gemini-mcp-server

./: .coverage  .env  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .releaserc.json  .trufflehogignore  AGENTS.md  Makefile  PIPELINE_SUMMARY.md  README.md  configure_mcp.py  install.sh  justfile  main.py  pyproject.toml  queue_persistence.db  requirements-dev.txt  requirements.txt  test_implementation.py  test_installation.py
.github/: renovate.json
.github/codeql/: codeql-config.yml
.github/workflows/: 01-validate.yml  02-test.yml  03-security.yml  04-build.yml  05-deploy.yml  ci.yml  dependency-update.yml  release.yml
config/: mcp.json.example
docs/: AGENTS.md
scripts/: validate.py
src/gemini_mcp_server/: __init__.py  exceptions.py  gemini_client.py  history_manager.py  image_parameters.py  queue_manager.py  rate_limiter.py  retry_handler.py  server.py
src/gemini_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_exceptions.py  test_gemini_client.py  test_history_manager.py  test_image_parameters.py  test_integration.py  test_queue_manager.py  test_queue_manager.py.disabled  test_rate_limiter.py  test_retry_handler.py  test_retry_handler.py.disabled  test_server.py
